# EVIBLOCK

./: .env  App.css  App.jsx  Cargo.toml  Frontend  LICENSE  README.md  app  canister_ids.json  dfx.json  package-lock.json  package.json
my-app/: package-lock.json  package.json
my-app/src/: App.css
my-app/src/components/: button.jsx  dialog.jsx  input.jsx  label.jsx
src/evi_block_backend/: Cargo.toml  evi_block_backend.did
src/evi_block_backend/src/: lib.rs
src/evi_block_frontend/: index.html  package.json
src/evi_block_frontend/src/: AboutPage.scss  App.jsx  FileInput.jsx  Particles.css  Particles.jsx  Squares.css  Squares.jsx  TextInput.jsx  ToggleButtons.css  ToggleButtons.jsx  TrueFocus .jsx  TrueFocus.css  Upload.jsx  header.jsx  index.scss
